<resources>
    <string name="app_name">calculator</string>

    <string name="buttonStandard">Standard</string>
    <string name="buttonScientific">Scientific</string>
    <string name="buttonEquationSolver">Equation Solver</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonMutiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonClear">C</string>
    <string name="buttonEqual">=</string>

    <string name="buttonZero">0</string>

    <string name="buttonOne">1</string>
    <string name="buttonTwo">2</string>
    <string name="buttonThree">3</string>

    <string name="square_root_symbol">\u221a</string>
    <string name="cube_root_symbol">\u221B</string>
    <string name="fourth_root_symbol">\u221a</string>
    <string name="pie_symbol">\u03C0</string>
    <string name="xsquare">x\u00B2</string>
    <string name="xcube">x\u00B3</string>
    <string name="exponent">e\u00B0</string>
    <string name="dividesymbol">x\u246B</string>

    <string name="buttonFour">4</string>
    <string name="buttonFive">5</string>
    <string name="buttonSix">6</string>

    <string name="buttonSeven">7</string>
    <string name="buttonEight">8</string>
    <string name="buttonNine">9</string>

</resources>
