<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="15dp"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >
            <Button
                android:text="@string/buttonStandard"
                android:textSize="8pt"
                android:id="@+id/buttonStandard"
                android:layout_width="150dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/buttonScientific"
                android:layout_width="150dp"
                android:layout_height="66dp"
                android:layout_weight="1"
                android:text="@string/buttonScientific"
                android:textSize="8pt" />

            <Button
                android:id="@+id/buttonEquationSolver"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonEquationSolver"
                android:textSize="8pt" />
        </LinearLayout>

        <TextView
            android:id="@+id/workSpace"
            android:layout_height="25pt"
            android:layout_width="match_parent"
            android:textSize="10pt"
            android:padding="4pt"
            android:gravity="right"
            />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="35pt"
            android:layout_weight="1"
            android:gravity="right"
            android:hint="0"
            android:padding="4pt"
            android:textSize="14pt" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dip"
            android:background="#FF909090" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/buttonSeven"
                android:textSize="14pt"
                android:id="@+id/button7"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                 />
            <Button
                android:text="@string/buttonEight"
                android:textSize="14pt"
                android:id="@+id/button8"
                android:layout_height="25pt"
                android:layout_width="25pt"
                android:layout_weight="1"
                 />
            <Button
                android:text="@string/buttonNine"
                android:textSize="14pt"
                android:id="@+id/button9"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                 />
            <Button
                android:text="@string/buttonDivide"
                android:textSize="14pt"
                android:id="@+id/buttonDivide"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/buttonFour"
                android:textSize="14pt"
                android:id="@+id/button4"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                 />
            <Button
                android:text="@string/buttonFive"
                android:textSize="14pt"
                android:id="@+id/button5"
                android:layout_height="25pt"
                android:layout_width="25pt"
                android:layout_weight="1"
                 />
            <Button
                android:text="@string/buttonSix"
                android:textSize="14pt"
                android:id="@+id/button6"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                 />
            <Button
                android:text="@string/buttonMutiply"
                android:textSize="14pt"
                android:id="@+id/buttonMultiply"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/buttonOne"
                android:textSize="14pt"
                android:id="@+id/button1"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                 />
            <Button
                android:text="@string/buttonTwo"
                android:textSize="14pt"
                android:id="@+id/button2"
                android:layout_height="25pt"
                android:layout_width="25pt"
                android:layout_weight="1"
                 />
            <Button
                android:text="@string/buttonThree"
                android:textSize="14pt"
                android:id="@+id/button3"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                 />
            <Button
                android:text="@string/buttonMinus"
                android:textSize="14pt"
                android:id="@+id/buttonMinus"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:text="@string/buttonClear"
                android:textSize="14pt"
                android:id="@+id/buttonClear"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                 />
            <Button
                android:text="@string/buttonZero"
                android:textSize="14pt"
                android:id="@+id/button0"
                android:layout_height="25pt"
                android:layout_width="25pt"
                android:layout_weight="1"
                 />
            <Button
                android:text="@string/buttonEqual"
                android:textSize="14pt"
                android:id="@+id/buttonEqual"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                 />
            <Button
                android:text="@string/buttonPlus"
                android:textSize="14pt"
                android:id="@+id/buttonPlus"
                android:layout_width="25pt"
                android:layout_height="25pt"
                android:layout_weight="1"
                 />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>