<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".MainActivity">


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <Button
                android:text="@string/buttonStandard"
                android:textSize="8pt"
                android:id="@+id/button_standard_in_equationSolver"
                android:layout_width="150dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
        />

        <Button
                android:id="@+id/button_scientific_in_equationSolver"
                android:layout_width="150dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/buttonScientific"
                android:textSize="8pt" />

        <Button
                android:id="@+id/button_equationSolver_in_equationSolver"
                android:layout_width="150dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/buttonEquationSolver"
                android:textSize="8pt" />
    </LinearLayout>
    <TextView
            android:id="@+id/textView"
            android:layout_width="350dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="68dp"
            android:text="Second Degree Equation Solver"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="32dp" />

    <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="128dp"
            android:text="a = "
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="176dp"
            android:text="b = "
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="228dp"
            android:text="c = "
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <EditText
            android:id="@+id/a_ValueEditText"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="116dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="68dp" />

    <EditText
            android:id="@+id/b_ValueEditText"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="164dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="68dp" />

    <EditText
            android:id="@+id/c_ValueEditText"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="216dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="68dp" />
    <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="350dp"
            android:text="X1 ="
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="21dp" />
    <TextView
            android:id="@+id/x1_value_textView"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="74dp"
            android:layout_marginTop="350dp"
            android:text="0"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="74dp" />

    <TextView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="350dp"
            android:text="X2 = "
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="220dp" />
    <TextView
            android:id="@+id/x2_value_textView"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="275dp"
            android:layout_marginTop="350dp"
            android:text="0"
            android:textSize="23sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="275dp" />

</android.support.constraint.ConstraintLayout>